client/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  labels:
    app: client
spec:
  selector:
    app: client
  type: LoadBalancer
  ports:
    - port: 8081
